# qwen3_fine-tune_mult-it

./: .gitignore  8b_v2-1.ipynb  8b_v2.ipynb  8b_v3.ipynb  README.md  mixed_v1.ipynb  pyproject.toml  qwen3_8b (3).ipynb  qwen3_8b.ipynb  qwen3_8b_V4.ipynb  thinking.ipynb
qwen_finetuning/: __init__.py  config.py  finetuning.py
